# pcg-cpp

./: CMakeLists.txt  README.md
include/pcg/: pcg_extras.hpp  pcg_random.hpp  pcg_uint128.hpp
sample/: CMakeLists.txt  basic_usage.cpp  codebook.cpp  cppref-sample.cpp  make-partytrick.cpp  pcg-demo.cpp  spew.cpp  use-partytrick.cpp
test-high/: CMakeLists.txt  check-pcg64_c1024.cpp  check-pcg64_c1024_fast.cpp  check-pcg64_c32.cpp  check-pcg64_c32_fast.cpp  check-pcg64_c32_oneseq.cpp  check-pcg64_k1024.cpp  check-pcg64_k1024_fast.cpp  check-pcg64_k32.cpp  check-pcg64_k32_fast.cpp  check-pcg64_k32_oneseq.cpp  pcg-test-noadvance.cpp  pcg-test.cpp
